# ftwm

./: .coveragerc  .gitignore  Cargo.toml  LICENSE  README.md  documentation.md  face_demo.py  ftwmcmd  push.sh  pyproject.toml  requirements.txt  run.sh  settings.ini  setup.cfg  setup.py  test.sh  tox.ini
src/: camera.py  click_to_focus.py  dbus.py  documentation.md  dynamic_grid.py  event.py  event.rs  event_handlers.py  face_tracking.py  handle_event.py  hook_modules.py  hooks.py  increment.py  jitter_filter.py  kalman_filter.py  kalman_filter.rs  lib.py  lib.rs  main.py  main.rs  misc.py  moving_average_filter.py  panning.rs  placement.py  rectangle.py  screen.py  state.py  util.rs  window.py
src/ftwm/: event_handlers.py  jitter_filter.py  kalman_filter.py  lib.py  main.py  window.py
test/: test_dynamic_grid.py  test_event_handlers.py  test_jitter_filter.py  test_kalman_filter.py  test_lib.py  test_main.py  test_placement.py  test_window.py  visualize_layout.py
