[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
strict = true
install_types = true
non_interactive = true
show_error_codes = true
disable_error_code = ["no-untyped-call", "import", "no-any-return"]
